# kth-aa

./: .gitignore  CMakeLists.txt  README.md  minifier.py  submit.py  submit.sh  tsp_plot.py
include/: VariadicTable.h
src/: CMakeLists.txt  TSP.cpp  TSP.h  blossom.h  blossom5_all_in_one_file.h  bruteforce.h  chokolino.h  christofides.h  clarke_wright.h  greedy.h  local2opt.h  local2opt_no_knn.h  local3opt.h  local3opt_no_knn_sequential.h  main.cpp  main_kattis.cpp  utility.cpp  utility.h
src/blossom5-v2.05.src/: example.cpp
tst/: TSP-test.cpp
